--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Oct 10 2023 07:30:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 16 2023 01:54:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652320eeeb3ca68e354e2761" data-wf-site="652320eeeb3ca68e354e2716">
 <head>
   <meta charset="utf-8">
@@ -266,7 +266,7 @@ margin: 0rem !important;
             <div class="grid-list2_list-wrapper">
               <div class="grid-list2_list">
                 <div class="grid-list2_item">
-                  <div class="grid-list2_image-wrapper"><img src="images/Untitled1-1707x843.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/Untitled1-1707x843-p-500.png 500w, images/Untitled1-1707x843-p-800.png 800w, images/Untitled1-1707x843-p-1080.png 1080w, images/Untitled1-1707x843-p-1600.png 1600w, images/Untitled1-1707x843.png 1707w" alt="" class="grid-list2_image"></div>
+                  <div class="grid-list2_image-wrapper"><img src="images/Untitled1-1707x843.webp" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/Untitled1-1707x843-p-500.png 500w, images/Untitled1-1707x843-p-800.png 800w, images/Untitled1-1707x843-p-1080.png 1080w, images/Untitled1-1707x843.webp 1707w" alt="" class="grid-list2_image"></div>
                   <div class="grid-list2_item-content">
                     <div class="margin-bottom margin-small">
                       <div class="grid-list2_avatar-image-wrapper"><img src="images/Group-1.svg" loading="lazy" alt="" class="grid-list2_avatar-image"></div>
@@ -278,6 +278,22 @@ margin: 0rem !important;
                     <div class="margin-top margin-medium">
                       <a href="week-1-grayson-fynn-mdef.html" class="button is-secondary is-small is-grid-list w-button">Read more</a>
                       <link rel="prerender" href="/week-1-grayson-fynn-mdef">
+                    </div>
+                  </div>
+                </div>
+                <div class="grid-list2_item">
+                  <div class="grid-list2_image-wrapper"><img src="images/Screenshot-2023-10-15-230238.webp" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/Screenshot-2023-10-15-230238-p-500.png 500w, images/Screenshot-2023-10-15-230238-p-800.png 800w, images/Screenshot-2023-10-15-230238-p-1080.png 1080w, images/Screenshot-2023-10-15-230238.webp 1242w" alt="" class="grid-list2_image"></div>
+                  <div class="grid-list2_item-content">
+                    <div class="margin-bottom margin-small">
+                      <div class="grid-list2_avatar-image-wrapper"><img src="images/Group-3.svg" loading="lazy" alt="" class="grid-list2_avatar-image"></div>
+                    </div>
+                    <div class="margin-bottom margin-xsmall">
+                      <div class="text-weight-semibold">Design Studio 01 + AOWS</div>
+                    </div>
+                    <p>Prototyping, 1st Person Research through Design, Design Space, Documentation and Communication, Design Interventions</p>
+                    <div class="margin-top margin-medium">
+                      <a href="week-2-grayson-fynn-mdef.html" class="button is-secondary is-small is-grid-list w-button">Read more</a>
+                      <link rel="prerender" href="/week-2-grayson-fynn-mdef">
                     </div>
                   </div>
                 </div>
