--- a/week-1-grayson-fynn-mdef.html
+++ b/week-1-grayson-fynn-mdef.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Oct 10 2023 07:30:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 16 2023 01:54:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652451019b348b33a9949b0d" data-wf-site="652320eeeb3ca68e354e2716">
 <head>
   <meta charset="utf-8">
@@ -365,7 +365,18 @@ margin: 0rem !important;
                               </div>
                               <div class="text-rich-text w-richtext">
                                 <p>The week wrapped up with a tour of the awe-inspiring Elisava campus, which honestly looks like it was plucked straight out of Silicon Valley. It&#x27;s a spectacular place, brimming with a fusion of cutting-edge technologies and traditional design tools, offering everything from a motion capture room and workshops to a recording booth and photography studio. If it exists in the realm of design and technology, Elisava has it.</p>
+                                <p>‍</p>
+                                <figure style="max-width:1238px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
+                                  <div><img loading="lazy" src="images/IMG_1394.webp" alt=""></div>
+                                  <figcaption>Elisava Motion Capture room</figcaption>
+                                </figure>
+                                <p>‍</p>
                                 <p>The tour transitioned into a lecture from MDEF co-director Laura Benitez, whose intellectual stimulation is second to none. I&#x27;m genuinely looking forward to more of her lectures, where we will dive deeper into exploring the philosophical aspects of our work.</p>
+                                <p>‍</p>
+                                <figure style="max-width:929px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
+                                  <div><img loading="lazy" src="images/IMG_1393.webp" alt="Modular kitchen from Elisava"></div>
+                                  <figcaption>Modular kitechen - Past Student Work</figcaption>
+                                </figure>
                               </div>
                             </div>
                           </div>
