--- a/week-2-grayson-fynn-mdef.html
+++ b/week-2-grayson-fynn-mdef.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Oct 16 2023 01:54:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 16 2023 02:07:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652c4ef619f4ee801abe6fcf" data-wf-site="652320eeeb3ca68e354e2716">
 <head>
   <meta charset="utf-8">
@@ -305,11 +305,11 @@ margin: 0rem !important;
                                 <blockquote><br>A redesigned rainwater collector and planter that uses compressed air to provide a similar pressure to the mains supply, allowing you to connect a hose or sprinkler to it just as you would an outside tap. Making collecting and using rainwater more accessible to all and making it easier to <em>“Switch from Mains to Rains”</em></blockquote>
                                 <p>‍</p>
                                 <figure style="max-width:2499pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/CARA_NDPoster_Small.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/CARA_NDPoster_Small.webp" alt=""></div>
                                   <figcaption>CARA - Image by Olliver Lloyd</figcaption>
                                 </figure>
                                 <figure style="max-width:1500pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/Pain_Point_Sketches_-_CARA1.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/Pain_Point_Sketches_-_CARA1.webp" alt=""></div>
                                   <figcaption>Sketch of problem CARA solves - Image by Olliver Lloyd</figcaption>
                                 </figure>
                                 <p>During my discussion with Oliver, it became evident that the primary role of the &quot;Cara&quot; prototype was to rigorously test a specific hypothesis. In this context, the prototype was designed to serve as a crucial tool for conducting experiments, making it a clear fit for role #1. The meticulous design of the experiment was central to the prototype&#x27;s purpose, underlining the significance of its role in hypothesis testing and validation.</p>
@@ -331,7 +331,7 @@ margin: 0rem !important;
                                 </ol>
                                 <p>Here is a short gif showing the concept.</p>
                                 <figure style="max-width:600px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/gif.gif" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/gif.gif" alt=""></div>
                                   <figcaption>Prototype in action</figcaption>
                                 </figure>
                               </div>
@@ -356,13 +356,13 @@ margin: 0rem !important;
                                 <p>‍</p>
                                 <p>The seminar commenced with an engaging exercise in which we randomly mapped out weak signals and then proceeded to share our thoughts and experiences related to these signals. This exercise encouraged collaborative exploration and provided a diverse perspective on the evolving landscape of emerging trends and potential disruptions.</p>
                                 <figure style="max-width:1238pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1415.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1415.webp" alt=""></div>
                                   <figcaption>MDEF floor, where the weak signals were positioned</figcaption>
                                 </figure>
                                 <p>Following the initial exercise, we delved deeper into the subject matter through a group activity. Rather than conducting it as a whole class, we divided into smaller groups. Once more, our task was to identify connections among seemingly unrelated topics pertaining to the future. This smaller group dynamic allowed for more focused discussions and facilitated the exploration of intricate interconnections between various weak signals and potential future developments.</p>
                                 <p>‍</p>
                                 <figure style="max-width:1239pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1417.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1417.webp" alt=""></div>
                                   <figcaption>Group weak signals exercise</figcaption>
                                 </figure>
                                 <p>One of the most captivating outcomes of this exercise was the opportunity to learn more about biomimicry from our colleague, Albert. It became evident that biomimicry is a fascinating and potentially powerful tool in the realm of future design. This newfound knowledge shed light on the innovative possibilities that can arise when we draw inspiration from nature to inform and shape our designs.</p>
@@ -375,14 +375,14 @@ margin: 0rem !important;
                                 <p>I often think about how this parallels with the sentiment of many UK citizens who once believed they would never have the opportunity to exit the EU and that their voices and votes would not matter. The lesson here is that individual actions and collective efforts can indeed bring about significant change, even in the face of seemingly insurmountable challenges.</p>
                                 <p>I have selected the following weak signals as the focal points within my design space:</p>
                                 <figure style="max-width:3840pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/AWS.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/AWS.webp" alt=""></div>
                                   <figcaption>Personal AWS v1</figcaption>
                                 </figure>
                                 <p>Subsequently, we explored a multiscalar personal design space, examining how these selected weak signals scale and impact not only me but also everyone in my immediate surroundings and beyond. This holistic perspective allowed us to consider the broader implications and interconnectedness of these signals, recognizing their potential to influence various levels of society and the environment.</p>
                               </div>
                             </div>
                           </div>
-                        </div><img sizes="81vw" srcset="images/Frame-33-p-500.png 500w, images/Frame-33-p-800.png 800w, images/Frame-33-p-1080.png 1080w, images/Frame-33-p-1600.png 1600w, images/Frame-33-p-2000.png 2000w, images/Frame-33-p-2600.png 2600w, images/Frame-33-p-3200.png 3200w, images/Frame-33.webp 3840w" alt="multiscalar design space" src="images/Frame-33.webp" loading="lazy" class="image-3">
+                        </div><img width="1920" sizes="81vw" alt="multiscalar design space" src="images/Frame-33.webp" loading="lazy" srcset="images/Frame-33-p-500.png 500w, images/Frame-33-p-800.png 800w, images/Frame-33-p-1080.png 1080w, images/Frame-33-p-1600.png 1600w, images/Frame-33-p-2000.png 2000w, images/Frame-33-p-2600.png 2600w, images/Frame-33-p-3200.png 3200w, images/Frame-33.webp 3840w" class="image-3">
                         <div class="content7_component">
                           <div class="margin-bottom margin-small"></div>
                           <div class="text-rich-text w-richtext">
@@ -393,11 +393,11 @@ margin: 0rem !important;
                             <p>However, in order for all to be well we need to practice foresight and not ignore issues before they escalate. Most illnesses can be cured if caught early. So, my weak signals:</p>
                             <p>‍</p>
                             <figure style="max-width:350px" class="w-richtext-align-floatleft w-richtext-figure-type-image">
-                              <div><img src="images/Group-12.webp" loading="lazy" alt=""></div>
+                              <div><img loading="lazy" src="images/Group-12.webp" alt=""></div>
                               <figcaption>Weak signal #1</figcaption>
                             </figure>
                             <figure style="max-width:350px" class="w-richtext-align-floatright w-richtext-figure-type-image">
-                              <div><img src="images/Group-13.webp" loading="lazy" alt=""></div>
+                              <div><img loading="lazy" src="images/Group-13.webp" alt=""></div>
                               <figcaption>Weak signal #2</figcaption>
                             </figure>
                             <p>‍</p>
@@ -417,7 +417,7 @@ margin: 0rem !important;
                             <p>Finally, my Design Space. This will be a work-in-progress for the rest of my life but I am glad to post a v1 of it today.</p>
                             <p>‍</p>
                             <figure style="max-width:3840pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                              <div><img src="images/Frame-72.webp" loading="lazy" alt=""></div>
+                              <div><img loading="lazy" src="images/Frame-72.webp" alt=""></div>
                             </figure>
                             <h2>Reflections</h2>
                             <p>‍</p>
@@ -533,7 +533,7 @@ tick();
                               <div target="_blank" class="text-rich-text w-richtext">
                                 <p>This week, Barcelona played host to 25 projects from around the globe, each presenting bold and innovative ideas aimed at addressing the world&#x27;s most pressing issues.</p>
                                 <figure style="max-width:1239pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1440.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1440.webp" alt=""></div>
                                   <figcaption>Disseny Hub in Barcelona</figcaption>
                                 </figure>
                                 <p>The tireless efforts put forth by these projects, with some dedicating years to their realization, serve as a truly inspiring and motivating force, encouraging others to join their ranks. Here are a couple of them:</p>
@@ -543,15 +543,15 @@ tick();
                                 </h3>
                                 <p>The Greenhouse-in-a-Box provides a controlled climate, protecting crops from extreme weather, pests, and diseases. Designed to be affordable and easy to set up, the Greenhouse-in-a-Box utilises solar-powered technology to maintain optimal temperatures and humidity levels.</p>
                                 <figure style="max-width:1238pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1442.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1442.webp" alt=""></div>
                                   <figcaption>Slide from presentation</figcaption>
                                 </figure>
                                 <figure style="max-width:1239pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1445.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1445.webp" alt=""></div>
                                   <figcaption>Image of the greenhoue</figcaption>
                                 </figure>
                                 <figure style="max-width:1239pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1446.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1446.webp" alt=""></div>
                                   <figcaption>Greenhouse from the inside</figcaption>
                                 </figure>
                                 <p><br></p>
@@ -560,25 +560,25 @@ tick();
                                 </h3>
                                 <p>The Drones for Whale Research programme, from the Ocean Alliance, is on a mission to democratise whale science through cheap and non-invasive technology. Standing on a boat Dr. Iain Kerr, CEO of Ocean Alliance, watched the whale dive under the surface just as they pulled up next to it. This could mean an hour wait before they could take much-needed samples. But then he noticed the smell coming from the whale’s blow – if it smells this bad, he thought, there must be some organic matter. This encounter, combined with Iain’s interdisciplinary skill set and interest in drones, was the beginning of Ocean Alliance’s Drones for Whale Research programme. From collecting the ‘snot’ of whales to understand their health and ecology in a non-invasive way, the programme has since adapted the technology to many other research uses and are making the comparatively cheap technology available to scientists across the world. Through this comparable data, scientists will better know how to protect these amazing animals for the future.</p>
                                 <figure style="max-width:1239px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1457.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1457.webp" alt=""></div>
                                   <figcaption>Healthy whales = Healthy oceans</figcaption>
                                 </figure>
                                 <figure style="max-width:1239px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1458.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1458.webp" alt=""></div>
                                   <figcaption>This slide explains the importance of whales in mitigating climate change</figcaption>
                                 </figure>
                                 <figure style="max-width:929px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1459.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1459.webp" alt=""></div>
                                   <figcaption>How do you study wildlife without interfering and stressing it?</figcaption>
                                 </figure>
                                 <p>My MDEF colleagues and I also participated in a life-centered design workshop. If you are a product designer you most-likely have created user personas at some point. What if a lake or a tree was your persona?</p>
                                 <p>‍</p>
                                 <figure style="max-width:1238px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1437.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1437.webp" alt=""></div>
                                   <figcaption>non-human persona</figcaption>
                                 </figure>
                                 <figure style="max-width:1239px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                                  <div><img src="images/IMG_1438.webp" loading="lazy" alt=""></div>
+                                  <div><img loading="lazy" src="images/IMG_1438.webp" alt=""></div>
                                   <figcaption>the life design-centered process</figcaption>
                                 </figure>
                                 <p>See you there next year!</p>
