--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ margin: 0rem !important;
                   </div>
                 </div>
                 <div class="grid-list2_item">
-                  <div class="grid-list2_image-wrapper"><img src="images/Screenshot-2023-10-15-230238.webp" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/Screenshot-2023-10-15-230238-p-500.png 500w, images/Screenshot-2023-10-15-230238-p-800.png 800w, images/Screenshot-2023-10-15-230238-p-1080.png 1080w, images/Screenshot-2023-10-15-230238.webp 1242w" alt="" class="grid-list2_image"></div>
+                  <div class="grid-list2_image-wrapper"><img src="images/652c537815486531fd83cb83_Screenshot-2023-10-15 230238.webp" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/Screenshot-2023-10-15-230238-p-500.png 500w, images/Screenshot-2023-10-15-230238-p-800.png 800w, images/Screenshot-2023-10-15-230238-p-1080.png 1080w, images/Screenshot-2023-10-15-230238.webp 1242w" alt="" class="grid-list2_image"></div>
                   <div class="grid-list2_item-content">
                     <div class="margin-bottom margin-small">
                       <div class="grid-list2_avatar-image-wrapper"><img src="images/Group-3.svg" loading="lazy" alt="" class="grid-list2_avatar-image"></div>
