--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Oct 16 2023 02:07:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 16 2023 02:40:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652320eeeb3ca68e354e2761" data-wf-site="652320eeeb3ca68e354e2716">
 <head>
   <meta charset="utf-8">
@@ -282,7 +282,7 @@ margin: 0rem !important;
                   </div>
                 </div>
                 <div class="grid-list2_item">
-                  <div class="grid-list2_image-wrapper"><img src="images/thumbnail-2.webp" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/Screenshot-2023-10-15-230238-p-500.png 500w, images/Screenshot-2023-10-15-230238-p-800.png 800w, images/Screenshot-2023-10-15-230238-p-1080.png 1080w, images/Screenshot-2023-10-15-230238.webp 1242w" alt="" class="grid-list2_image"></div>
+                  <div class="grid-list2_image-wrapper"><img src="images/Screenshot-2023-10-15-230238.webp" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/Screenshot-2023-10-15-230238-p-500.png 500w, images/Screenshot-2023-10-15-230238-p-800.png 800w, images/Screenshot-2023-10-15-230238-p-1080.png 1080w, images/Screenshot-2023-10-15-230238.webp 1242w" alt="" class="grid-list2_image"></div>
                   <div class="grid-list2_item-content">
                     <div class="margin-bottom margin-small">
                       <div class="grid-list2_avatar-image-wrapper"><img src="images/Group-3.svg" loading="lazy" alt="" class="grid-list2_avatar-image"></div>
