--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Oct 16 2023 02:40:26 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Oct 29 2023 17:17:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652320eeeb3ca68e354e2761" data-wf-site="652320eeeb3ca68e354e2716">
 <head>
   <meta charset="utf-8">
@@ -274,7 +274,7 @@ margin: 0rem !important;
                     <div class="margin-bottom margin-xsmall">
                       <div class="text-weight-semibold">Landing</div>
                     </div>
-                    <p>Arrival excitement, warm encounters with staff and colleagues, to exploring our vibrant campus ecosystem.</p>
+                    <p class="card-p">Arrival excitement, warm encounters with staff and colleagues, to exploring our vibrant campus ecosystem.</p>
                     <div class="margin-top margin-medium">
                       <a href="week-1-grayson-fynn-mdef.html" class="button is-secondary is-small is-grid-list w-button">Read more</a>
                       <link rel="prerender" href="/week-1-grayson-fynn-mdef">
@@ -288,12 +288,28 @@ margin: 0rem !important;
                       <div class="grid-list2_avatar-image-wrapper"><img src="images/Group-3.svg" loading="lazy" alt="" class="grid-list2_avatar-image"></div>
                     </div>
                     <div class="margin-bottom margin-xsmall">
-                      <div class="text-weight-semibold">Design Studio 01 + AOWS</div>
+                      <div class="text-weight-semibold">Design Studio</div>
                     </div>
-                    <p>Prototyping, 1st Person Research through Design, Design Space, Documentation and Communication, Design Interventions</p>
+                    <p class="card-p">Prototyping, 1st Person Research through Design, Design Space, Documentation and Communication, Design Interventions</p>
                     <div class="margin-top margin-medium">
                       <a href="week-2-grayson-fynn-mdef.html" class="button is-secondary is-small is-grid-list w-button">Read more</a>
                       <link rel="prerender" href="/week-2-grayson-fynn-mdef">
+                    </div>
+                  </div>
+                </div>
+                <div class="grid-list2_item">
+                  <div class="grid-list2_image-wrapper"><img src="images/RENDERING.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/RENDERING.jpg 500w, images/RENDERING.jpg 800w, images/RENDERING.jpg 1080w, images/RENDERING.jpg 1600w, images/RENDERING.jpg 1835w" alt="" class="grid-list2_image"></div>
+                  <div class="grid-list2_item-content">
+                    <div class="margin-bottom margin-small">
+                      <div class="grid-list2_avatar-image-wrapper"><img src="images/Group-9.svg" loading="lazy" alt="" class="grid-list2_avatar-image"></div>
+                    </div>
+                    <div class="margin-bottom margin-xsmall">
+                      <div class="text-weight-semibold">The Machine Paradox</div>
+                    </div>
+                    <p class="card-p"><strong> Documentation, Tinkering, Design, Prototyping, Digital Fabrication</strong></p>
+                    <div class="margin-top margin-medium">
+                      <a href="week3.html" class="button is-secondary is-small is-grid-list w-button">Read more</a>
+                      <link rel="prerender" href="/week3">
                     </div>
                   </div>
                 </div>
