--- a/week-2-grayson-fynn-mdef.html
+++ b/week-2-grayson-fynn-mdef.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Oct 16 2023 02:40:26 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Oct 29 2023 17:17:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652c4ef619f4ee801abe6fcf" data-wf-site="652320eeeb3ca68e354e2716">
 <head>
   <meta charset="utf-8">
@@ -263,6 +263,9 @@ margin: 0rem !important;
                   <a data-w-tab="Tab 3" class="layout405_tab-link w-inline-block w-tab-link">
                     <div>Fixing the Future Festival</div>
                   </a>
+                  <a data-w-tab="Tab 4" class="layout405_tab-link w-inline-block w-tab-link">
+                    <div>Design Studio 02</div>
+                  </a>
                 </div>
                 <div class="layout405_tabs-content w-tab-content">
                   <div data-w-tab="Tab 1" class="layout405_tab-pane w-tab-pane w--tab-active">
@@ -382,7 +385,7 @@ margin: 0rem !important;
                               </div>
                             </div>
                           </div>
-                        </div><img width="1920" sizes="81vw" alt="multiscalar design space" src="images/Frame-33.webp" loading="lazy" srcset="images/Frame-33-p-500.png 500w, images/Frame-33-p-800.png 800w, images/Frame-33-p-1080.png 1080w, images/Frame-33-p-1600.png 1600w, images/Frame-33-p-2000.png 2000w, images/Frame-33-p-2600.png 2600w, images/Frame-33-p-3200.png 3200w, images/Frame-33.webp 3840w" class="image-3">
+                        </div><img width="1920" sizes="(max-width: 479px) 100vw, (max-width: 767px) 691.2083740234375px, (max-width: 991px) 90vw, 81vw" alt="multiscalar design space" src="images/Frame-33.webp" loading="lazy" srcset="images/Frame-33-p-500.png 500w, images/Frame-33-p-800.png 800w, images/Frame-33-p-1080.png 1080w, images/Frame-33-p-1600.png 1600w, images/Frame-33-p-2000.png 2000w, images/Frame-33-p-2600.png 2600w, images/Frame-33-p-3200.png 3200w, images/Frame-33.webp 3840w" class="image-3">
                         <div class="content7_component">
                           <div class="margin-bottom margin-small"></div>
                           <div class="text-rich-text w-richtext">
@@ -584,6 +587,29 @@ tick();
                                 <p>See you there next year!</p>
                               </div>
                             </div>
+                          </div>
+                        </div>
+                      </div>
+                    </section>
+                  </div>
+                  <div data-w-tab="Tab 4" class="w-tab-pane">
+                    <section class="section_content7">
+                      <div class="padding-global">
+                        <div class="container-small">
+                          <div class="padding-section-large">
+                            <div class="content7_component">
+                              <div class="margin-bottom margin-small">
+                                <h2 id="w-node-_325732be-2b17-560f-a7c4-84511a6602ad-1abe6fcf"><strong>Going above and beyond</strong></h2>
+                              </div>
+                              <div class="text-rich-text w-richtext">
+                                <p>We have a design space, or at least a first version of it. It&#x27;s big and complex and a lot going on but that was only the beginning.</p>
+                                <p>In our second design studio we were asked to join forces.</p>
+                                <p>Starting with the weak signals that we learned about a week prior we grouped in areas of interest. I am an aspiring environmentalist so I teamed up other colleagues that have the same interest and we decided to start planning an intervention around this.</p>
+                                <p>We are interested in your waste .. we think it might be a valuable resource, not garbage. We are planning a exciting activity for our colleagues and instructors so stay tuned.</p>
+                                <p>Meanwhile, this is the collective design space we made together:</p>
+                              </div>
+                            </div>
+                            <div class="w-embed w-iframe"><iframe width="768" height="432" src="https://miro.com/app/live-embed/uXjVNZ6tXgw=/?moveToViewport=-3042,-182,3698,1804&embedId=235103231910" frameborder="0" scrolling="no" allow="fullscreen; clipboard-read; clipboard-write" allowfullscreen=""></iframe></div>
                           </div>
                         </div>
                       </div>
