--- a/week-2-grayson-fynn-mdef.html
+++ b/week-2-grayson-fynn-mdef.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Oct 29 2023 17:17:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Nov 06 2023 22:47:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652c4ef619f4ee801abe6fcf" data-wf-site="652320eeeb3ca68e354e2716">
 <head>
   <meta charset="utf-8">
@@ -211,7 +211,13 @@ margin: 0rem !important;
           <nav role="navigation" class="navbar4_menu w-nav-menu">
             <div class="navbar4_menu-wrapper">
               <div class="container-large _1">
-                <a href="#" class="navbar4_link w-nav-link">Weekly updates</a>
+                <a href="week-2-grayson-fynn-mdef.html" aria-current="page" class="navbar4_link w-nav-link w--current">Design Studio 01 - AOWS</a>
+              </div>
+              <div class="container-large _1">
+                <a href="week-2-grayson-fynn-mdef.html" aria-current="page" class="navbar4_link w-nav-link w--current">Design Studio 02 - Collective Design Space</a>
+              </div>
+              <div class="container-large _1">
+                <a href="week3.html" class="navbar4_link w-nav-link">The Machine Paradox</a>
               </div>
             </div>
           </nav>
