--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Oct 29 2023 17:17:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Nov 06 2023 22:47:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652320eeeb3ca68e354e2761" data-wf-site="652320eeeb3ca68e354e2716">
 <head>
   <meta charset="utf-8">
@@ -211,7 +211,13 @@ margin: 0rem !important;
           <nav role="navigation" class="navbar4_menu w-nav-menu">
             <div class="navbar4_menu-wrapper">
               <div class="container-large _1">
-                <a href="#weekly" class="navbar4_link w-nav-link">Weekly updates</a>
+                <a href="week-2-grayson-fynn-mdef.html" class="navbar4_link w-nav-link">Design Studio 01 - AOWS</a>
+              </div>
+              <div class="container-large _1">
+                <a href="week-2-grayson-fynn-mdef.html" class="navbar4_link w-nav-link">Design Studio 02 - Collective Design Space</a>
+              </div>
+              <div class="container-large _1">
+                <a href="week3.html" class="navbar4_link w-nav-link">The Machine Paradox</a>
               </div>
             </div>
           </nav>
@@ -298,7 +304,7 @@ margin: 0rem !important;
                   </div>
                 </div>
                 <div class="grid-list2_item">
-                  <div class="grid-list2_image-wrapper"><img src="images/RENDERING.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/RENDERING.jpg 500w, images/RENDERING.jpg 800w, images/RENDERING.jpg 1080w, images/RENDERING.jpg 1600w, images/RENDERING.jpg 1835w" alt="" class="grid-list2_image"></div>
+                  <div class="grid-list2_image-wrapper"><img src="images/RENDERING.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 32vw" srcset="images/RENDERING-p-500.jpg 500w, images/RENDERING-p-800.jpg 800w, images/RENDERING-p-1080.jpg 1080w, images/RENDERING-p-1600.jpg 1600w, images/RENDERING.jpg 1835w" alt="" class="grid-list2_image"></div>
                   <div class="grid-list2_item-content">
                     <div class="margin-bottom margin-small">
                       <div class="grid-list2_avatar-image-wrapper"><img src="images/Group-9.svg" loading="lazy" alt="" class="grid-list2_avatar-image"></div>
