--- a/week3.html
+++ b/week3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Oct 29 2023 17:17:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Nov 06 2023 22:47:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652ef09bf14f3838efaeb725" data-wf-site="652320eeeb3ca68e354e2716">
 <head>
   <meta charset="utf-8">
@@ -211,7 +211,13 @@ margin: 0rem !important;
           <nav role="navigation" class="navbar4_menu w-nav-menu">
             <div class="navbar4_menu-wrapper">
               <div class="container-large _1">
-                <a href="#" class="navbar4_link w-nav-link">Weekly updates</a>
+                <a href="week-2-grayson-fynn-mdef.html" class="navbar4_link w-nav-link">Design Studio 01 - AOWS</a>
+              </div>
+              <div class="container-large _1">
+                <a href="week-2-grayson-fynn-mdef.html" class="navbar4_link w-nav-link">Design Studio 02 - Collective Design Space</a>
+              </div>
+              <div class="container-large _1">
+                <a href="week3.html" aria-current="page" class="navbar4_link w-nav-link w--current">The Machine Paradox</a>
               </div>
             </div>
           </nav>
@@ -426,7 +432,7 @@ margin: 0rem !important;
   "group": "3"
 }</script>
                                 </a>
-                                <a href="#" class="gallery10_lightbox-link w-inline-block w-lightbox"><img sizes="(max-width: 767px) 81vw, 25vw" srcset="images/ZAxis-partial.JPG 500w, images/ZAxis-partial.JPG 800w, images/ZAxis-partial.JPG 960w" alt="" src="images/ZAxis-partial.JPG" loading="lazy" class="gallery10_image">
+                                <a href="#" class="gallery10_lightbox-link w-inline-block w-lightbox"><img sizes="(max-width: 767px) 81vw, 25vw" srcset="images/ZAxis-partial-p-500.jpg 500w, images/ZAxis-partial-p-800.jpg 800w, images/ZAxis-partial.JPG 960w" alt="" src="images/ZAxis-partial.JPG" loading="lazy" class="gallery10_image">
                                   <script type="application/json" class="w-json">{
   "items": [
     {
